--- a/app/views/currency_templates/step_three.html.erb
+++ b/app/views/currency_templates/step_three.html.erb
@@ -2,8 +2,9 @@
 
 <p> 
   1 <%= @from_symbol%> equals <%= @rate%> <%= @to_symbol%>.
+ 
 </p>
 
 <P>
-  Go <a href = "/forex">back</a>.
+  Go <a href = "/forex/<%= @from_symbol%>">back </a>.
 </p>
